travis config added

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,13 @@ script:
   - docker build -t oscarfouoma/multi-nignx ./nginx
   - docker build -t oscarfouoma/multi-server ./server
   - docker build -t oscarfouoma/multi-worker ./worker
-
 # log in first to Docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin   
 # take them those images and push them to docker hub
-
+  - docker push oscarfouoma/multi-client
+  - docker push oscarfouoma/multi-nignx
+  - docker push oscarfouoma/multi-server 
+  - docker push oscarfouoma/multi-worker 
 # deploy:
 #   provider: elasticbeanstalk
 #   region: "us-east-2"
