--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     client:
         stdin_open: true
         build:
-            dockerfile: Dockerfile.dev
+            # dockerfile: Dockerfile.dev
             context: ./client
         volumes:
             - /app/node_modules
