--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ sudo: required
 services: 
   - docker
 
-before_install:
-  - docker build -t oscarfouoma/react-test -f ./client/Dockerfile.dev ./client
+# before_install:
+#   - docker build -t oscarfouoma/react-test -f ./client/Dockerfile.dev ./client
 
-after_success:
-  - docker run oscarfouoma/react-test npm test -- --coverage
+# after_success:
+#   - docker run oscarfouoma/react-test npm test -- --coverage
 
 script:
   - docker build -t oscarfouoma/multi-client ./client
