--- a/k8s/postgres-deployment.yaml
+++ b/k8s/postgres-deployment.yaml
@@ -12,8 +12,30 @@ spec:
       labels:
         component: postgres
     spec:
+      volumes:
+        - name: postgres-storage
+          persistentVolumeClaim:
+            claimName: database-persistent-volume-claim 
       containers:
         - name: postgres
           image: postgres
           ports:
             - containerPort: 5432
+          volumeMounts:
+            - name: postgres-storage
+              mountPath: /var/lib/postgressql/data
+              subPath: postgres
+          env:
+            # - name: POSTGRES_USER
+            #   value: postgres
+            # - name: POSTGRES_HOST
+            #   value: postgres-cluster-ip-service
+            # - name: POSTGRES_PORT
+            #   value: 5432
+            # - name: POSTGRES_DATABASE
+            #   value: postgres
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: pgpassword
+                  key: PGPASSWORD
