--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -17,20 +17,20 @@ spec:
           image: oscarfouoma/multi-server
           ports:
             - containerPort: 5000
-          env: 
+          env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
             - name: REDIS_PORT
               value: '6379'
-            - name: POSTGRES_USER
+            - name: PGUSER
               value: postgres
-            - name: POSTGRES_HOST
+            - name: PGHOST
               value: postgres-cluster-ip-service
-            - name: POSTGRES_PORT
+            - name: PGPORT
               value: '5432'
-            - name: POSTGRES_DATABASE
+            - name: PGDATABASE
               value: postgres
-            - name: POSTGRES_PASSWORD
+            - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
                   name: pgpassword
